--- a/src/components/Confetti/index.module.css
+++ b/src/components/Confetti/index.module.css
@@ -8,12 +8,21 @@
 .piece {
   position: absolute;
   height: 100%;
-  animation: fall linear infinite;
-  animation-duration: 2s;
-  margin-left: 50%;
 }
 
-@keyframes fall {
+.fallA {
+  animation: fallA linear infinite;
+}
+
+.fallB {
+  animation: fallB linear infinite;
+}
+
+.fallC {
+  animation: fallC linear infinite;
+}
+
+@keyframes fallA {
   0% {
     transform: translate(0%, 0);
   }
@@ -25,6 +34,42 @@
   }
   75% {
     transform: translate(200%, 75%);
+  }
+  100% {
+    transform: translate(0%, 100%);
+  }
+}
+
+@keyframes fallB {
+  0% {
+    transform: translate(0%, 0);
+  }
+  25% {
+    transform: translate(50%, 25%);
+  }
+  50% {
+    transform: translate(0%, 50%);
+  }
+  75% {
+    transform: translate(50%, 75%);
+  }
+  100% {
+    transform: translate(0%, 100%);
+  }
+}
+
+@keyframes fallC {
+  0% {
+    transform: translate(0%, 0);
+  }
+  25% {
+    transform: translate(50%, 25%);
+  }
+  50% {
+    transform: translate(0%, 50%);
+  }
+  75% {
+    transform: translate(-50%, 75%);
   }
   100% {
     transform: translate(0%, 100%);
